[workspace]
resolver = "2"

members = [
    # main crates, published on crates.io
    "capnp",
    "capnpc",
    "capnp-futures",
    "capnp-rpc",
    "capnp-import",
    "capnp-macros",

    # testing and examples
    "async-byte-channel",
    "benchmark",
    "capnpc/test",
    "capnpc/test/external-crate",
    "capnpc/test-edition-2015",
    "capnpc/test-edition-2018",
    "capnpc/test-edition-2021",
    "capnp-futures/test",
    "capnp-rpc/examples/hello-world",
    "capnp-rpc/examples/calculator",
    "capnp-rpc/examples/pubsub",
    "capnp-rpc/test",
    "example/addressbook",
    "example/addressbook_send",
    "example/fill_random_values",
]
default-members = ["capnp", "capnp-import"]

[workspace.package]
version = "0.18.0-alpha"
edition = "2021"
rust-version = "1.65.0"
license = "MIT"
repository = "https://github.com/fundament-software/capnproto-rust"
documentation = "https://docs.rs/capnp/"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1.0.0", features = ["net", "rt", "macros"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
capnp = { version = "0.18.0-alpha", path = "./capnp" }
capnpc = { version = "0.18.0-alpha", path = "./capnpc" }
capnp-rpc = { version = "0.18.0-alpha", path = "./capnp-rpc" }
capnp-import = { version = "0.18.0-alpha", path = "./capnp-import" }
capnp-macros = { version = "0.18.0-alpha", path = "./capnp-macros" }
capnp-futures = { version = "0.18.0-alpha", path = "./capnp-futures" }
async-byte-channel = { path = "./async-byte-channel" }
futures = { version = "0.3.0", default-features = false, features = ["std"] }
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
anyhow = "1.*"
tempfile = "3.*"
