[package]
name = "async-byte-channel"
version = "0.0.1"
license = "MIT"
description = "Helper library for writing async tests"

repository = "https://github.com/dwrensha/capnproto-rust"
edition = "2021"

[dependencies.capnp-futures]
version = "0.25.0"
path = "../capnp-futures"
default-features = false

[dev-dependencies.futures]
version = "0.3.0"
default-features = false
features = ["std", "executor"]

[lints]
workspace = true
