[package]

name = "benchmark"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>"  ]
build = "build.rs"

[[bin]]

name = "benchmark"
path = "benchmark.rs"

[[bin]]

name = "run_all_benchmarks"
path = "run_all.rs"

[build-dependencies]
capnpc = { path = "../capnpc" }

[dependencies]
rand = "0.4"
capnp = { path = "../capnp" }
