[package]

name = "benchmark"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>"  ]
build = "build.rs"
edition = "2018"

[[bin]]

name = "benchmark"
path = "benchmark.rs"

[[bin]]

name = "run_all_benchmarks"
path = "run_all.rs"

[build-dependencies]
capnpc = { path = "../capnpc" }

[dependencies]
capnp = { path = "../capnp" }
