[package]

name = "benchmark"
version = "0.0.0"
authors = ["David Renshaw <dwrenshaw@sandstorm.io>"]
edition = "2021"

[[bin]]

name = "benchmark"
path = "benchmark.rs"

[[bin]]

name = "run_all_benchmarks"
path = "run_all.rs"

[dependencies]
capnp = { path = "../capnp" }
capnp-import = { path = "../capnp-import" }
