[package]
name = "capnp-conv"
version = "0.11.0"
authors = [ "David Renshaw <dwrenshaw@gmail.com>", "real <real@freedomlayer.org>"]
license = "MIT"
edition = "2018"

[dependencies]

capnp_conv_derive = { path = "capnp-conv-derive", version = "0.1.0", package = "capnp-conv-derive" }

capnp = { path = "../capnp", package = "capnp" }
derive_more = "0.15.0"

[build-dependencies]
capnpc = { path = "../capnpc", package = "capnpc" }

[dev-dependencies]

byteorder = {version = "1.3.2", features = ["i128"]}
