[package]
name = "capnp-import"
version.workspace = true
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Fetches official Cap-n-Proto compiler (capnp) releases and automatically compiles all capnp files in a set of folders, then combines them in a single capnp_include.rs file.
"""
categories = ["compilers", "development-tools::build-utils", "parsing"]

repository.workspace = true
documentation.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage = "https://github.com/fundament-software/capnp-import"
license.workspace = true
debug = true

[lib]
proc-macro = true

[dependencies]
anyhow.workspace = true
capnpc.workspace = true
capnp.workspace = true
convert_case = "0.6"
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
wax = "0.5.0"
walkdir = "2"
tempfile.workspace = true

[build-dependencies]
relative-path = "1.7.2"
anyhow.workspace = true
cmake = { version = "0.1" }
which = "4.3.0"
reqwest = { version = "0.11", features = ["blocking"] }
zip-extract = { version = "^0.1.1", features = ["deflate"] }

[features]
deny-net-fetch = []
