[package]
name = "capnp-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
capnp = { version = "0.18.0-alpha", path = "../capnp" }
capnp-rpc = { version = "0.18.0-alpha", path = "../capnp-rpc" }
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
# For testing
capnp-import = {version = "0.2.0", path = "../capnp-import" }
tokio = { version = "1", features = ["macros", "rt"]}
