[package]
name = "capnp-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
capnp.workspace = true
capnp-rpc.workspace = true
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true

[dev-dependencies]
# For testing
capnp-import.workspace = true
tokio.workspace = true
