[package]

name = "capnp-rpc"
version.workspace = true
authors = ["David Renshaw <dwrenshaw@sandstorm.io>"]
license.workspace = true
description = "implementation of the Cap'n Proto remote procedure call protocol"
repository.workspace = true
documentation = "https://docs.rs/capnp-rpc/"
categories = ["network-programming"]
autoexamples = false
edition.workspace = true

readme = "README.md"

[dependencies.futures]
workspace = true

[dependencies]
capnp-futures.workspace = true
capnp.workspace = true
