[package]

name = "capnp-rpc"
version = "0.23.0"
authors = [ "David Renshaw <dwrenshaw@gmail.com>" ]
license = "MIT"
description = "implementation of the Cap'n Proto remote procedure call protocol"
repository = "https://github.com/capnproto/capnproto-rust"
documentation = "https://docs.rs/capnp-rpc/"
categories = ["network-programming"]
autoexamples = false
edition = "2021"

readme = "README.md"

[dependencies.futures]
version = "0.3.0"
default-features = false

[dependencies]
capnp-futures = { version = "0.23.0", path = "../capnp-futures", default-features = false }
capnp = {version = "0.23.0", path = "../capnp"}
embedded-io-async = { version = "0.7.0", optional = true }

[features]
default = ["std"]
std = ["futures/std", "embedded-io-async?/std", "capnp-futures/std", "alloc"]
alloc = ["futures/alloc", "embedded-io-async?/alloc", "capnp-futures/alloc"]
embedded-io = ["dep:embedded-io-async"]

#[lints]
#workspace = true

[lints.clippy]
type_complexity = "allow"  # this should be removed in future
