[package]

name = "capnp-rpc"
version = "0.25.0"
authors = [ "David Renshaw <dwrenshaw@gmail.com>" ]
license = "MIT"
description = "implementation of the Cap'n Proto remote procedure call protocol"
repository = "https://github.com/capnproto/capnproto-rust"
documentation = "https://docs.rs/capnp-rpc/"
categories = ["network-programming"]
autoexamples = false
edition = "2021"

readme = "README.md"

[dependencies.futures]
version = "0.3.0"
default-features = false
features = ["std"]

[dependencies]
capnp-futures = { version = "0.25.0", path = "../capnp-futures" }
capnp = {version = "0.25.0", path = "../capnp"}

#[lints]
#workspace = true

[lints.clippy]
type_complexity = "allow"  # this should be removed in future
