[package]

name = "capnp"
version = "0.17.0"
authors = [ "David Renshaw <dwrenshaw@gmail.com>" ]
license = "MIT"
description = "runtime library for Cap'n Proto data encoding"
repository = "https://github.com/capnproto/capnproto-rust"
documentation = "https://docs.rs/capnp/"
edition = "2021"
rust-version.workspace = true

readme = "README.md"

keywords = ["encoding", "protocol", "serialization"]

[dependencies]
base64 = { version = "0.21.2", optional = true }
hex = { version = "0.4.3", optional = true }
quickcheck = { version = "1", optional = true }
serde_json = { version = "1.0.96", optional = true }

[dev-dependencies]
quickcheck = "1"

[features]
default = ["std"]

rpc_try = []

# If enabled, relaxes alignment requirements on segments.
# This has a performance cost on some targets (e.g. ARMv6).
unaligned = []

# If disabled, turns on no_std, which tells rustc to not link
# with the Rust standard library.
std = []

# If enabled, ReadLimiter will use `AtomicUsize` instead of `Cell<usize>`, allowing
# message readers to be `Sync`. Note that AtomicUsize is not supported by all
# rustc targets.
sync_reader = []

# Enable dynamic JSON serialization/deserialization
json = ["std", "serde_json", "hex", "base64"]
