[package]
name = "capnpc"
version.workspace = true
authors = ["David Renshaw <dwrenshaw@gmail.com>"]
license.workspace = true
description = "Cap'n Proto code generation"
repository.workspace = true
documentation = "https://docs.rs/capnpc/"
edition.workspace = true
readme = "README.md"

keywords = ["encoding", "protocol", "serialization"]

[[bin]]

name = "capnpc-rust"
path = "src/capnpc-rust.rs"

[[bin]]

name = "capnpc-rust-bootstrap"
path = "src/capnpc-rust-bootstrap.rs"


[dependencies.capnp]
workspace = true
features = ["std"]
