[package]

name = "capnp-rpc-rust-test"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>"  ]
build = "build.rs"

[lib]

name = "capnp_rpc_test"
path = "test.rs"

[build-dependencies]
capnpc = "0.7"

[dependencies.capnp-rpc]
path = "../"

[dependencies]
capnp = "0.7"
futures = "0.1"
tokio-core = "0.1"
mio-uds = "0.6"

[replace]
"capnp:0.7.5" = { git = "https://github.com/dwrensha/capnproto-rust", branch = "futures" }
"capnpc:0.7.5" = { git = "https://github.com/dwrensha/capnpc-rust", branch = "futures" }
"capnp-futures:0.0.2" = { git = "https://github.com/dwrensha/capnp-futures-rs" }