[package]

name = "capnp-futures-test"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>"  ]
build = "build.rs"

[lib]

name = "capnp_futures_test"
path = "test.rs"

[build-dependencies]
capnpc = "0.8"

[dependencies]
capnp-futures = {path = "./../"}
capnp = "0.8"
futures = "0.1"
tokio-core = "0.1"
mio-uds = "0.6"
