[package]

name = "capnp-futures-test"
version = "0.0.0"
authors = ["David Renshaw <dwrenshaw@gmail.com>"]
edition = "2021"

[lib]

name = "capnp_futures_test"
path = "test.rs"

[dependencies]
capnp-futures = { path = "./../" }
capnp = { path = "../../capnp" }
capnp-import = { path = "../../capnp-import" }
futures = "0.3.0"
async-byte-channel = { path = "./../../async-byte-channel" }
