[package]

name = "capnp-rpc-test"
version = "0.0.0"
authors = ["David Renshaw <dwrenshaw@sandstorm.io>"]
edition = "2021"

[lib]

name = "capnp_rpc_test"
path = "test.rs"

[dependencies.capnp-rpc]
path = "../"

[dependencies]
capnp = { path = "../../capnp" }
capnp-import = { path = "../../capnp-import" }
futures = "0.3.0"
async-byte-channel = { path = "./../../async-byte-channel" }
