[package]

name = "capnp-rpc-test"
version = "0.0.0"
authors = ["David Renshaw <dwrenshaw@sandstorm.io>"]
edition.workspace = true

[lib]

name = "capnp_rpc_test"
path = "test.rs"

[dependencies]
capnp-rpc.workspace = true
capnp.workspace = true
futures.workspace = true
async-byte-channel.workspace = true

[dev-dependencies]
capnp-import.workspace = true
