[package]

name = "capnp-rpc-test"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>"  ]
build = "build.rs"
edition = "2021"

[lib]

name = "capnp_rpc_test"
path = "test.rs"

[build-dependencies]
capnpc = { path = "../../capnpc" }

[dependencies.capnp-rpc]
path = "../"

[dependencies]
capnp = { path = "../../capnp" }
capnp-futures = { path = "../../capnp-futures", default-features = false, features = ["tokio-unix-fd-stream"] }
futures-channel = { version = "0.3.0" }
futures-util = { version = "0.3.0" }
async-byte-channel = {path = "./../../async-byte-channel"}
tokio = { version = "1.52.3", features = ["macros", "rt", "io-util"] }

[lints]
workspace = true
