[package]

name = "capnpc-test-edition-2021"
version = "0.0.0"
build = "build.rs"
edition = "2021"

[lib]

name = "capnpc_test_edition_2021"
path = "test.rs"

[build-dependencies]
capnpc = { path = "../" }

[dependencies]
capnp = { path = "../../capnp" }
capnpc = { path = "../" }
external-crate = { path = "../test/external-crate" }
