[package]

name = "capnpc-test"
version = "0.0.0"
authors = ["David Renshaw <dwrenshaw@sandstorm.io>"]
build = "build.rs"
edition = "2021"

[lib]

name = "capnpc_test"
path = "test.rs"

[build-dependencies]
capnpc.workspace = true
capnp-import.workspace = true
tempfile.workspace = true
anyhow.workspace = true

[dependencies]
capnp.workspace = true
capnpc.workspace = true
external-crate = { path = "./external-crate" }
