[package]

name = "addressbook"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@gmail.com>"  ]
build = "build.rs"

[[bin]]

name = "addressbook"
path = "addressbook.rs"

[build-dependencies.capnpc]
version = "0.8"
path = "../../capnpc"

[dependencies.capnp]
version = "0.8"
path = "../../capnp"
