[package]

name = "addressbook"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>"  ]
build = "build.rs"

[[bin]]

name = "addressbook_send"
path = "addressbook_send.rs"


[build-dependencies.capnpc]
path = "../../"

[dependencies]
capnp = { git = "https://github.com/capnproto/capnproto-rust", rev = "21f74aa1a204d8353b5eefa4c17ef11a6835f653" }
