[package]

name = "fill_random_values"
version = "0.0.0"
license.workspace = true
description = "library for generating random capnp data"
edition.workspace = true

readme = "README.md"

keywords = ["encoding", "protocol", "serialization"]

[dependencies]
rand = "0.8.5"
capnp-import.workspace = true
capnp.workspace = true

[[bin]]
name = "fill_addressbook"
path = "fill_addressbook.rs"

[[bin]]
name = "fill_shapes"
path = "fill_shapes.rs"
