[package]
name = "wasm-hello-world"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# Avoid getting picked up by parent workspaces.
[workspace]
members = ["."]

[dependencies]
wasmer = "4.0.0"

[dependencies.capnp]
path = "../../capnp"

[build-dependencies.capnpc]
path = "../../capnpc"

[lints]
workspace = true
