[package]

name = "calculator"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>"  ]
build = "build.rs"

[[bin]]

name = "calculator"
path = "main.rs"

[build-dependencies]
capnpc = "0.6"

[dependencies]
gj = "0.1"
capnp = "0.6"

[dependencies.gjio]
git = "https://github.com/dwrensha/gjio.git"

[dependencies.capnp-rpc]
path = "../.."
