[package]

name = "calculator"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>"  ]
build = "build.rs"

[[bin]]

name = "calculator"
path = "main.rs"

[build-dependencies]
capnpc = "0.7"

[dependencies]
gj = "0.2"
gjio = "0.1"
capnp = "0.7"

[dependencies.capnp-rpc]
path = "../.."
