[package]

name = "calculator"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>"  ]
build = "build.rs"

[[bin]]

name = "calculator"
path = "main.rs"

[build-dependencies]
capnpc = "0.8"

[dependencies]
capnp = "0.8"
futures = "0.1"
tokio-core = "0.1"

[dependencies.capnp-rpc]
path = "../.."
