[package]
name = "pubsub"
version = "0.1.0"
authors = ["David Renshaw <david@sandstorm.io>"]

build = "build.rs"

[[bin]]
name = "main"
path = "main.rs"

[build-dependencies]
capnpc = "0.6"

[dependencies]
capnp = "0.6"
gj = "0.1"

[dependencies.gjio]
git = "https://github.com/dwrensha/gjio.git"

[dependencies.capnp-rpc]
path = "../.."