[package]
name = "pubsub"
version = "0.1.0"
authors = ["David Renshaw <david@sandstorm.io>"]

build = "build.rs"

[[bin]]
name = "pubsub"
path = "main.rs"

[build-dependencies]
capnpc = "0.7"

[dependencies]
capnp = "0.7"
futures = "0.1"
tokio-core = "0.1"

[dependencies.capnp-rpc]
path = "../.."


[replace]
"capnp:0.7.5" = { git = "https://github.com/dwrensha/capnproto-rust", branch = "futures" }
"capnpc:0.7.5" = { git = "https://github.com/dwrensha/capnpc-rust", branch = "futures" }
"capnp-futures:0.0.2" = { git = "https://github.com/dwrensha/capnp-futures-rs" }